# cargo-ledger

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
src/: backend.rs  error.rs  main.rs  setup.rs  utils.rs
src/backend/: hid.rs  interface.rs  speculos.rs
tests/valid/: Cargo.toml
tests/valid_outdated/: Cargo.toml
tests/valid_variant/: Cargo.toml
