[package]
name = "cargo-ledger"
version = "1.12.2"
authors = ["Ledger"]
description = "Build and sideload Ledger apps"
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/LedgerHQ/cargo-ledger"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
cargo_metadata = "0.23.1"
clap = { version = "4.1.8", features = ["derive"] }
goblin = "0.10.5"